# MallSenseAI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  alarm_system.py  blue_box_detector.py  camera.py  camera_configs.json  camera_manager.py  config.py  convert_coordinates.py  debug_image_compare.py  docker-compose.dev.yml  docker-compose.yml  image_comparer.py  main.py  nginx.conf  requirements.txt  safe_zones.json  update_base_image.py  web_server.py  wechat_notifier.py  yolo_detector.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/alerts/: __init__.py  critical.py  events.py  service.py  state_machine.py  ws.py
backend/app/api/: __init__.py  alert_workflow.py  alerts.py  cameras.py  dashboard.py  detection_events.py  notifications.py  rois.py  rule_definitions.py  rules.py  scenes.py  users.py  utils.py  work_orders.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  router.py
backend/app/camera/: __init__.py  adapter.py  capture.py  health.py  registry.py
backend/app/core/: config.py
backend/app/db/: alembic.ini  migrate_legacy.py  migration_mapping.md  run_migration.py  seed.py  session.py
backend/app/detectors/: __init__.py  base.py  debris.py  fire_smoke.py  integration.py
backend/app/models/: __init__.py  base.py  entities.py
backend/tests/: conftest.py  test_api.py  test_detection_event.py  test_notification_api.py  test_pipeline.py  test_pipeline_mocks.py  test_roi_engine.py  test_rule_engine.py  test_worker_executor.py  test_worker_metrics.py  test_worker_models.py  test_worker_scheduler.py
(+126 files in other folders)
